--- a/src/webapp.manifest.json
+++ b/src/webapp.manifest.json
@@ -35,5 +35,6 @@
   ],
 	"start_url": "index.html",
 	"display": "standalone",
-	"orientation": "portrait"
+	"orientation": "portrait",
+  "background_color": "white"
 }
